# pi-agent-space

./: .containerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.local.md.example  CLAUDE.md  Containerfile  PROBLEM.md  README.md  REVIEW.md  cliff.toml  committed.toml  mise.toml
.beads/: config.yaml  dolt-backup.json  issues.jsonl  metadata.json
.githooks/: pre-push
.github/workflows/: ci.yml
docs/: design-notes.md  implementation-plan.md  math.aux  math.out  math.tex  prompts.md  surrogate-model.tex  terminology.md  threat-model.md  user-journeys.md
docs/adrs/: 0001-implementation-language.md  0002-ipc-mechanism.md  0003-trial-persistence.md  0004-workspace-isolation.md  0005-trial-cost-and-budget.md  0006-reproducibility-under-stochastic-agents.md  0007-pi-invocation-lifecycle.md  0008-shared-exploration-space.md  0009-trial-isolation-boundary.md  0010-acceptance-test-tiering.md  0011-outcome-classifier-single-source-of-truth.md  0012-capability-profile-and-metric-events.md  0013-driver-run-event-log.md  0014-re-finalize-semantics.md  0015-structured-logging-depth.md  0016-surrogate-modeling-framework.md  0017-typed-event-payload-model.md  0018-surrogate-numerical-robustness.md  0019-versioning-and-compatibility-policy.md  0020-v1-security-scope-and-threat-model.md  0021-containerization-and-deployment-baseline.md  README.md  (+2 more)
haskell/: mise.toml  pi-agent-space.cabal
haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell/dist-newstyle/packagedb/ghc-9.14.1/: package.cache  pi-agent-space-0.1.0.0-inplace.conf
haskell/src/: AgentSpace.hs  ClaudeCodeArchitecture.hs  OpenClawArchitecture.hs  Ports.hs
haskell/test/: AgentSpaceSpec.hs
isabelle/: AgentSpace.thy  ClaudeCodeArchitecture.thy  OpenClawArchitecture.thy  Ports.thy
python/: mise.toml  pyproject.toml
python/src/pi_evaluator/: config.py  lifecycle.py  logging_config.py  optimizer_driver.py  preservation_queue.py  trial_runner.py
python/src/pi_evaluator/adapters/: cli_stream_adapter.py  cli_subprocess_adapter.py  ehvi_acquisition.py  gp_numerics.py  graduated_problem_set_adapter.py  het_gp_surrogate.py  observability.py  per_trial_directory_adapter.py  random_from_slot_space.py  sandbox.py  stub_agent_harness_adapter.py  stub_scorer.py  surrogate_proposer.py  synthetic_suite_scorer.py  workspace.py
python/src/pi_evaluator/cli/: score.py
python/src/pi_evaluator/domain/: bockeler.py  candidate_selection.py  capability_profile.py  event_payloads.py  events.py  featurize.py  identity.py  pareto.py  redaction.py  run_paths.py  slot_space.py  surrogate_data.py  telemetry.py  test_suite.py  tolerant_read.py  types.py
python/src/pi_evaluator/ports/: acquisition_port.py  agent_harness_port.py  eval_suite_source_port.py  observability_port.py  package_proposer_port.py  persistence_port.py  sandbox_port.py  scoring_port.py  surrogate_model_port.py
python/tests/: acceptance_support.py  builders.py  test_acceptance_phase1.py  test_acceptance_phase2.py  test_acceptance_phase3.py  test_acceptance_phase4.py  test_acceptance_phase5.py  test_acceptance_phase6.py  test_adapters.py  test_agent_harness.py  test_capability_profile.py  test_cli_score.py  test_cli_subprocess_adapter.py  test_config.py  test_domain_types.py  test_ehvi_acquisition.py  test_eval_suite_source.py  test_event_payloads.py  test_featurize.py  test_gp_numerics.py  test_identity.py  test_lifecycle.py  test_logging_config.py  test_observability.py  test_optimizer_driver.py  test_pareto.py  test_persistence.py  test_preservation_queue.py  test_random_from_slot_space.py  test_redaction.py  test_sandbox.py  test_scoring.py  test_slot_space.py  test_subjective_score_event.py  test_surrogate.py  test_surrogate_data.py  test_surrogate_proposer.py  test_synthetic_suite_scorer.py  test_telemetry.py  test_tolerant_read.py  (+3 more)
(+25 files in other folders)
