[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.11",
    "ty>=0.0.1a1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pi_evaluator"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "acceptance: real-Pi end-to-end acceptance test (requires API keys, costs tokens)",
]
addopts = "-m 'not acceptance'"

[tool.ruff.lint]
# Defaults (E, F, W) plus pyupgrade (UP) for modernizations such as
# UP007 (Optional[X] → X | None) and isort (I) for import sorting.
select = ["E", "F", "W", "UP", "I"]
