[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.11",
    "ty>=0.0.1a1",
]

[project.scripts]
pi-eval = "pi_evaluator.cli.score:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pi_evaluator"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "acceptance_fast: real-Pi acceptance test at minimal-spend budget (1 trial, 0 retries, 1 problem; ADR 0010)",
    "acceptance_full: real-Pi acceptance test at production-default budget (ADR 0010)",
]
addopts = "-m 'not acceptance_fast and not acceptance_full'"

[tool.ruff.lint]
# Defaults (E, F, W) plus pyupgrade (UP) for modernizations such as
# UP007 (Optional[X] → X | None) and isort (I) for import sorting.
select = ["E", "F", "W", "UP", "I"]
